<resources>
    <!-- Global -->
    <string name="app_name">English is water ! Irregular verbs</string>
    <string name="title_progression">Progression</string>
    <string name="title_to_study">Revision</string>
    <string name="title_explorer">All verbs</string>

    <!-- Revision -->
    <string name="empty_revision_message">No card to study anymore</string>
    <string name="item_revision_front_cardview_default_translation">[Translation]</string>
    <string name="item_revision_text_infinitive">[Infinitif]</string>
    <string name="item_revision_text_past">[Passé]</string>
    <string name="item_revision_text_past_participle">[Participe passé]</string>

    <!-- Revision -->
    <string name="first_day_scheduler_text">1 day</string>
    <string name="second_day_scheduler_text">3 days</string>
    <string name="third_day_scheduler_text">10 days</string>
    <string name="fourth_day_scheduler_text">20 days</string>
    <string name="no_choice_day_scheduler_text">Not scheduled</string>
    <string name="revision_fragment_remove_scheduler_title">Do not learn this verb anymore</string>
    <string name="revision_fragment_remove_scheduler_message">Are you sure you want to du this ?</string>
    <string name="revision_fragment_remove_scheduler_cancel">CANCEL</string>
    <string name="revision_fragment_remove_scheduler_accept">DO NOT LEARN ANYMORE</string>

    <!-- Progression -->
    <string name="progression_fragment_fraction">%d / 177</string>
    <string name="progression_last_level_legend_text">It\'s water</string>
    <string name="no_ending_revision_item_title">Revise your verbs</string>
</resources>
